; ModuleID = '/home/carl/AnghaBench/redis/deps/jemalloc/src/extr_zone.c_zone_free.c'
source_filename = "/home/carl/AnghaBench/redis/deps/jemalloc/src/extr_zone.c_zone_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*)* @zone_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @zone_free(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = call i32 (...) @tsdn_fetch()
  %6 = load i8*, i8** %4, align 8
  %7 = call i64 @ivsalloc(i32 %5, i8* %6)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %12

9:                                                ; preds = %2
  %10 = load i8*, i8** %4, align 8
  %11 = call i32 @je_free(i8* %10)
  br label %15

12:                                               ; preds = %2
  %13 = load i8*, i8** %4, align 8
  %14 = call i32 @free(i8* %13)
  br label %15

15:                                               ; preds = %12, %9
  ret void
}

declare dso_local i64 @ivsalloc(i32, i8*) #1

declare dso_local i32 @tsdn_fetch(...) #1

declare dso_local i32 @je_free(i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
